# visiline

./: .gitignore  LICENSE  PIPELINE_REFACTORING_PLAN.md  QUICKSTART.md  README.md  example.py  main.py  preprocess.py  pyproject.toml  verify_config_consistency.py
configs/: data.yaml  default.yaml  pipeline.yaml  pre-processing.yaml  production.yaml  quick.yaml
dataset/: data.yaml
dataset_smoke/: data.yaml
docs/: DATA_CHANGE_CAPABILITY.md  HELP.md  QUICKSTART.md  QnA.md  others.md
scripts/: data_prep.py  extract_keyframes.sh  inference.py  sync_dataset.py  train.py  voc2yolo.py
src/: __init__.py  config.py  data.py  image_cleaner.py  image_normalizer.py  inference.py  model.py  pipeline.py  trainer.py  utils.py  video_processor.py
