[project]
name = "yolo-tmr"
version = "0.1.0"
description = "YOLO Traffic Sign Recognition - Training and Deployment Acceleration"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "YOLO-TMR", email = "info@yolo-tmr.local"}]
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.4.33",
]


[[tool.uv.index]]
# 指定包索引
# Define the package index for PyTorch
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true     # 确保该索引仅用与安装 PyTorch 相关的包

[tool.uv.sources]
# 配合索引使用，指定包的来源
# Define the source for PyTorch packages
torch = [
    { index = "pytorch-gpu" },
]
torchvision = [
    { index = "pytorch-gpu" },
]


[tool.ruff]
# 1. 基础设置
target-version = "py311"          # 指定 Python 版本（配合你之前的环境设置）
line-length = 88                  # 行宽限制，默认 88（Black 风格），也可设为 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "weights",                     # YOLO 项目通常有存放权重的文件夹，建议排除
    "**/migrations",
]

# 2. 规则选择 (核心部分)
[tool.ruff.lint]
# 启用以下规则集：
select = [
    "E",      # pycodestyle 错误 (如语法错误、行太长)
    "W",      # pycodestyle 警告 (如空白符问题)
    "F",      # Pyflakes (如未使用的导入、未定义的变量)
    "I",      # isort (自动排序 import)
    "B",      # flake8-bugbear (常见的代码设计缺陷)
    "UP",     # pyupgrade (自动升级 Python 语法，如 f-string)
    "SIM",    # flake8-simplify (简化代码逻辑)
    "C4",     # flake8-comprehensions (优化列表推导式)
    "RUF",    # Ruff 专属规则
]

# 忽略以下规则（根据实际情况调整）
ignore = [
    "E501",   # 行太长（通常交给 formatter 处理，这里忽略以免冲突）
    "B008",   # 允许在函数参数中执行函数调用（FastAPI/PyTorch 常用）
]

# 3. 针对特定文件的忽略 (非常实用)
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]         # 测试文件允许 assert 和 print，不需要文档字符串
"scripts/**/*.py" = ["E402", "T201"]    # 脚本文件：E402 (sys.path.insert), T201 (print)
"main.py" = ["E402", "T201"]            # 同上，main.py 可能包含脚本式代码
"__init__.py" = ["F401"]                # __init__.py 允许导入但不使用（为了导出）

# 4. 格式化设置 (替代 Black)
[tool.ruff.format]
quote-style = "double"            # 使用双引号 "
indent-style = "space"            # 使用空格缩进
line-ending = "auto"              # 自动检测换行符

# 5. 导入排序设置 (替代 isort)
[tool.ruff.lint.isort]
known-first-party = ["my_project"] # 如果有本地包，在这里定义